--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
 
           <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/fotogabriel.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Gabriel Viana</h4>
-                <span>exemplo</span>
-                <p>Resonsável pels estatégias e crescimento das redes sociais!</p>
+                <span>Analist de Desempenho/Gestor de Tráfego</span>
+                <p>Responsável por analisar e apresentar aos clientes o desempenho das campanhas e o alcance da marca no mercado digital após os serviços prestados pela inova.!</p>
                 <div class="social">
                   <a href=""><i class="ri-instagram-fill"></i></a>
                 </div>
