nova foto do gabriel

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
           <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/fotogabriel.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/gabrielfoto.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Gabriel Viana</h4>
                 <span>Analist de Desempenho/Gestor de Tráfego</span>
